/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.2.1.RELEASE'
    id 'checkstyle'
    id 'war'
}

repositories {
    jcenter()
    maven {
        url = uri('https://repo.spring.io/libs-milestone')
    }

    maven {
        url = uri('http://repo.maven.apache.org/maven2')
    }
}

dependencies {
    implementation 'javax.servlet:jstl:1.2'
    implementation 'org.springframework.ldap:spring-ldap-core:2.3.2.RELEASE'
    implementation 'org.springframework.security:spring-security-ldap:4.1.4.RELEASE'
    implementation 'org.apache.httpcomponents:httpclient:4.5.2'
    implementation 'javax.ws.rs:javax.ws.rs-api:2.0'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'org.codehaus.jettison:jettison:1.3.7'
    implementation 'commons-lang:commons-lang:2.3'
    implementation 'org.springframework.boot:spring-boot:1.4.3.RELEASE'
    implementation 'org.springframework.boot:spring-boot-autoconfigure:1.4.3.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-web:1.4.3.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:1.4.3.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-security:1.4.3.RELEASE'
    implementation 'org.springframework.security.extensions:spring-security-saml-dsl:1.0.0.M3'
    implementation 'org.springframework.boot:spring-boot-devtools:1.4.3.RELEASE'
    implementation 'javax.mail:mail:1.5.0-b01'
    implementation 'org.springframework.boot:spring-boot-starter-mail:1.4.3.RELEASE'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr3'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr3'
    implementation 'org.webjars:bootstrap:4.1.2'
    implementation 'net.logstash.logback:logstash-logback-encoder:4.7'
    implementation 'javax.xml.bind:jaxb-api:2.1'
    implementation 'org.apache.derby:derby:10.12.1.1'
    implementation 'org.apache.velocity:velocity:1.7'
    implementation 'org.apache.commons:commons-io:1.3.2'
    implementation 'com.ibatis:ibatis2-common:2.1.7.597'
    implementation 'com.google.collections:google-collections:1.0-rc2'
    
    implementation 'org.springframework.boot:spring-boot-starter-tomcat:1.4.3.RELEASE'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:8.5.9'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test:1.4.3.RELEASE'
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.mockito:mockito-all:2.0.2-beta'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.0-M4'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.0-M4'
    
    compileOnly 'org.projectlombok:lombok:1.18.10'
    testCompileOnly 'org.projectlombok:lombok:1.18.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.10'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.10'
    
    compile group: 'org.eclipse.jdt.core.compiler', name: 'ecj', version: '4.5.1'
}

group = 'org.openkilda'
description = 'OpenKilda-GUI'
sourceCompatibility = '1.8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

jacoco {
    toolVersion = '0.8.5'
}

jacocoTestReport {
    reports {
        xml.enabled true
        csv.enabled false
        html.enabled true
    }
}

bootJar {
    archiveFileName = "${archivesBaseName}.${archiveExtension.get()}"
}

checkstyle {
    toolVersion '8.18'
    configDirectory = file('src/checkstyle')
    configProperties = [
            'checkstyle.suppression.file': file('src/checkstyle/checkstyle-suppress-known-issues.xml'),
            'checkstyle.header.file'     : file('src/checkstyle/checkstyle-header.txt')
    ]

    showViolations = true
    ignoreFailures = false
    maxWarnings = 0

    configurations {
        checkstyle
    }

    dependencies {
        checkstyle 'com.puppycrawl.tools:checkstyle:8.18'
    }
}

[checkstyleMain, checkstyleTest].each { task ->
    task.logging.setLevel(LogLevel.LIFECYCLE)
}

jar {
  manifest { 
    attributes "Main-Class": "org.openkilda.OpenKildaApplication"
  }
}
